<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <!-- Foto utama -->
    <ImageView
        android:id="@+id/ivPhotoDetail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/black"
        android:contentDescription="@string/photo"
        android:scaleType="matrix"/>

    <!-- Info + tombol fav dalam 1 baris -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvAuthorDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvSizeDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/photo_size"
                android:textColor="@android:color/white"
                android:textSize="14sp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnAddFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_fav"/>
    </LinearLayout>
</LinearLayout>